# butler_robot_assignment

./: README.md
butler_bot_interfaces/: CMakeLists.txt  package.xml
butler_bot_interfaces/action/: NavigateTables.action
butler_bot_interfaces/srv/: ConfirmArrival.srv
butler_navigation/: CMakeLists.txt  package.xml
butler_navigation/src/: butler_navigation.cpp
butler_navigation_cpp/: CMakeLists.txt  package.xml
butler_robot/: package.xml  setup.py
butler_robot/butler_robot/: butler_navigation.py  food_placement_confirmation_server.py  main_controller.py
turtlebot3_gazebo/: CMakeLists.txt  package.xml
turtlebot3_gazebo/launch/: nav_with_map.launch.py  spawn_turtlebot3.launch.py  turtlebot3_world.launch.py
turtlebot3_gazebo/models/turtlebot3_burger/: mapper_params_online_async.yaml  model.sdf
turtlebot3_gazebo/worlds/: new_cafe.world  new_cafe1.world
turtlebot3_navigation2/launch/: navigation2.launch.py
turtlebot3_navigation2/map/: french_cafe.pgm  french_cafe.yaml  new_french_cafe.pgm  new_french_cafe.yaml
turtlebot3_navigation2/param/: burger.yaml
